implement CGB color correction based on https://forums.libretro.com/t/real-gba-and-ds-phat-colors/1540/190

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,7 @@ include(GoogleTest)
 add_executable(
         age_gtest
         age_emulator_gb/common/age_gb_events.test.cpp
+        age_emulator_gb/lcd/age_gb_lcd_palettes_cgb.test.cpp
 )
 target_link_libraries(age_gtest age_emulator_gb age_common gtest_main)
 target_include_directories(age_gtest PUBLIC api)
