--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,15 +33,14 @@ else ()
     message("Qt5 not found => age_qt_gui not available")
 endif ()
 
-# age_cgb_lut and age_tester require libpng
+# age_tester requires libpng
 find_package(PNG QUIET)
 if (PNG_FOUND)
-    message("PNG found => configuring age_cgb_lut and age_tester")
+    message("PNG found => configuring age_tester")
     add_compile_definitions(LIBPNG_FOUND)
-    add_subdirectory(age_cgb_lut)
     add_subdirectory(age_tester)
 else ()
-    message("PNG not found => age_cgb_lut and age_tester not available")
+    message("PNG not found => age_tester not available")
 endif ()
 
 # age_wasm requires emscripten
