add age-test-roms job to GitHub workflow

--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -140,6 +140,24 @@ jobs:
         run: build/age_ci.sh run-tests acid2
 
 
+  test-age:
+    name: run age-test-roms
+    runs-on: ubuntu-20.04
+    needs: [ build-tester ]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: download artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ${{ env.ARTIFACT_PATH }}
+
+      - name: run tests
+        run: build/age_ci.sh run-tests age
+
+
   test-blargg:
     name: run Blargg's test suite
     runs-on: ubuntu-20.04
