fix qt build, minor adjustments

--- a/src/age_emulator_gb/CMakeLists.txt
+++ b/src/age_emulator_gb/CMakeLists.txt
@@ -40,4 +40,4 @@ target_include_directories(age_emulator_gb PUBLIC api)
 #set_target_properties(age_emulator_gb PROPERTIES COMPILE_FLAGS "-save-temps -fverbose-asm -Wa,-adhlmn=main.lst")
 
 # uncomment this to generate assembler listings with clang
-set_target_properties(age_emulator_gb PROPERTIES COMPILE_FLAGS "--save-temps")
+#set_target_properties(age_emulator_gb PROPERTIES COMPILE_FLAGS "--save-temps")
