run Mooneye Test Suite extended by wilbertpol

--- a/src/age_tester/CMakeLists.txt
+++ b/src/age_tester/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(
         age_tester_tasks_gambatte.cpp
         age_tester_tasks_mealybug.cpp
         age_tester_tasks_mooneye.cpp
+        age_tester_tasks_mooneye_wilbertpol.cpp
         age_tester_tasks_rtc3test.cpp
         age_tester_tasks_same_suite.cpp
         age_tester_thread_pool.hpp
