--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -248,6 +248,24 @@ jobs:
         run: build/age_ci.sh run-tests mooneye
 
 
+  test-mooneye-wilbertpol:
+    name: run Mooneye Test Suite (wilbertpol)
+    runs-on: ubuntu-20.04
+    needs: [ build-tester ]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ${{ env.ARTIFACT_PATH }}
+
+      - name: run tests
+        run: build/age_ci.sh run-tests mooneye-wilbertpol
+
+
   test-rtc3test:
     name: run rtc3test
     runs-on: ubuntu-20.04
