--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -22,6 +22,7 @@ jobs:
       - name: install Qt
         uses: jurplel/install-qt-action@v3
         with:
+          modules: 'qtmultimedia'
           version: '6.5.*'
           cache: true
 
