disable qt debug logging for release builds, adjust build-qt job

--- a/src/age_qt_gui/CMakeLists.txt
+++ b/src/age_qt_gui/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 COMPONENTS Core Gui Widgets Openglwidgets Multimedia REQUIRED)
+find_package(Qt6 COMPONENTS Core Gui Widgets OpenGLWidgets Multimedia REQUIRED)
 
 add_executable(
         age_qt_gui
@@ -41,3 +41,10 @@ set_target_properties(age_qt_gui PROPERTIES CXX_CLANG_TIDY "")
 
 target_link_libraries(age_qt_gui PRIVATE
         Qt6::Core Qt6::Gui Qt6::Widgets Qt6::OpenGLWidgets Qt6::Multimedia age_emulator_gb age_common)
+
+# Disable debug logging for release builds.
+# Note that this will not work for e.g. -DCMAKE_BUILD_TYPE=ReLeAsE
+# https://gitlab.kitware.com/cmake/cmake/-/issues/22591
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_definitions(age_qt_gui PUBLIC QT_NO_DEBUG_OUTPUT)
+endif ()
