--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -17,30 +17,22 @@ jobs:
   build-qt:
     name: build Qt application
     runs-on: ubuntu-22.04
-    if: ${{ false }}  # disable for now
     steps:
       # https://github.com/jurplel/install-qt-action
-      - name: cache Qt
-        id: cache-qt
-        uses: actions/cache@v3
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-Qt-cache-5.12.8
-
       - name: install Qt
         uses: jurplel/install-qt-action@v3
         with:
-          version: '5.12.8'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+          # for a list of available modules see:
+          # https://ddalcino.github.io/aqt-list-server/
+          modules: 'qtmultimedia'
+          version: '6.5.*'
+          cache: true
 
       - name: checkout code
         uses: actions/checkout@v3
 
-      - name: log g++ version
-        run: g++ -v
-
       - name: build AGE
-        run: build/age_ci.sh build-qt release
+        run: build/age_ci.sh build-qt Release
 
       - name: upload Qt artifact
         uses: actions/upload-artifact@v3
